--- a/SemesterOppgave1/SemesterOppgave1/Properties/launchSettings.json
+++ b/SemesterOppgave1/SemesterOppgave1/Properties/launchSettings.json
@@ -11,7 +11,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "index.html",
+      "launchUrl": "test.html",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -19,7 +19,7 @@
     "SemesterOppgave1": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "index.html",
+      "launchUrl": "test.html",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
