--- a/SemesterOppgave1/SemesterOppgave1/Properties/launchSettings.json
+++ b/SemesterOppgave1/SemesterOppgave1/Properties/launchSettings.json
@@ -11,7 +11,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "calendar.html",
+      "launchUrl": "home-made-calendar.html",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
